Fixed spacing

--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -185,3 +185,23 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: #2C2F33;
 }
+
+.submitbutton {
+    background-color: hsla(210, 3%, 13%, 0.4);
+    border:none;
+    border-radius: 4px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    font-family: 'Courier New', Courier, monospace;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+.submitbutton:hover {
+    background-color: #2C2F33;
+    cursor: pointer;
+}
